[package]
name = "rust-terminal-game"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"

[patch.crates-io]
# libc = { git = "https://github.com/thenotary/libc", branch = "allow-basic-tcgetattr" }
libc = { path = "../../open_source/libc" }

[patch."https://github.com/wasix-org/libc"]
libc = { git = "https://github.com/thenotary/libc", branch = "allow-basic-tcgetattr" }
